# gcampus

./: .dockerignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  environment.yml  fixture.json  gunicorn.conf.py  manage.py  npm-shrinkwrap.json  package-lock.json  package.json  production.json  pyproject.toml  requirements-dev.txt  requirements.txt  webpack.config.js
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: release.yml  static.yml  test.yml
docs/: conf.py  index.md
docs/development/: configuration.md  index.md  mockup.md  release.md  setup.md
docs/getting_started/: index.md  setup.md
docs/reference/: commands.md  index.md
docs/source/: conf.py  index.md
frontend/: webpack.config.js
gcampus/: __init__.py  asgi.py  urls.py  wsgi.py
gcampus/admin/: __init__.py  apps.py  options.py  sites.py
gcampus/analysis/: __init__.py  apps.py  urls.py  util.py  views.py
gcampus/api/: __init__.py  apps.py  fields.py  filters.py  filtersets.py  overpass.py  serializers.py  urls.py  utils.py  widgets.py  wikidata.py
gcampus/auth/: __init__.py  admin.py  apps.py  context_processors.py  decorators.py  exceptions.py  middleware.py  receivers.py  recievers.py  session.py  signals.py  tasks.py  urls.py  utils.py  widgets.py
gcampus/core/: __init__.py  admin.py  apps.py  context_processors.py  decorators.py  fields.py  files.py  filters.py  middleware.py  receivers.py  renderable.py  storage.py  tabs.py  (+4 more)
gulpfile.js/: config.js  index.js
(+539 files in other folders)
