[project]
name = "gcampus"
version = "0.10.4"
authors = [
    {name = "Axel Schlindwein"},
    {name = "Noah Wach"},
    {name = "Jonas Drotleff", email = "j.drotleff@desk-lab.de" },
]
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = "/(\\.eggs|\\.git|venv|gulpfile.js|node_modules)/"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["migrations"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
py_version = "311"
only_sections = true
skip = "frontend"

[tool.coverage.run]
command_line = "manage.py test"
include = ["gcampus/*"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/settings/*.py",
    "gcampus/[aw]sgi.py",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gcampus.settings.test"
# -- recommended but optional:
python_files = ["gcampus/**/tests/*.py", "gcampus/**/tests.py"]
